syntax = "proto3";

service TaskService {
  rpc GetCompletedTasksAverage (EmptyRequest) returns (AverageResponse);
  rpc GetPendingTasksAverage (EmptyRequest) returns (AverageResponse);
  rpc GetInProgressTasksAverage (EmptyRequest) returns (AverageResponse);
}

message EmptyRequest {}

message AverageResponse {
  float average = 1;
}